# par-view

./: .gitignore  CMakeLists.txt  README.md  ThreadManager.cpp  ThreadManager.h  main.cpp
src/: config.cpp  config.hpp  main.cpp  motion_detector.cpp  motion_detector.hpp  notifier.cpp  notifier.hpp  thread_manager.cpp
